Fix jekkyl config (?)

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-cayman
-title: H3K iart Workshop
+title: "H3K iart Workshop"
 plugins:
   - jemoji
 
-# description: Winter 2018
+# description: ""
 # show_downloads: "true"
