Edit github-pages content and templates

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-cayman
 title: "H3K iart Workshop"
-description: "2019.05.14 and 2019.05.25"
+description: "2019.05.14 / 2019.05.25"
 show_downloads: "true"
 plugins:
   - jemoji
